[gd_scene load_steps=4 format=3 uid="uid://ddxpivoo2gx2g"]

[ext_resource type="Script" uid="uid://bgx1psyjjg6xo" path="res://map_control.gd" id="1_01x0f"]
[ext_resource type="Script" uid="uid://cclah7s2ysgno" path="res://map_camera_2d.gd" id="2_8g8wr"]

[sub_resource type="ButtonGroup" id="ButtonGroup_wl3j5"]

[node name="MapControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01x0f")

[node name="MapContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModesContainer" type="HBoxContainer" parent="MapContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VerticesButton" type="Button" parent="MapContainer/ModesContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_wl3j5")
text = "Vertices"

[node name="LinesButton" type="Button" parent="MapContainer/ModesContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wl3j5")
text = "Lines"

[node name="SectorsButton" type="Button" parent="MapContainer/ModesContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_wl3j5")
text = "Sectors"

[node name="MapViewContainer" type="SubViewportContainer" parent="MapContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="MapContainer/MapViewContainer"]
unique_name_in_owner = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1280, 765)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="MapContainer/MapViewContainer/Viewport"]
script = ExtResource("2_8g8wr")

[connection signal="toggled" from="MapContainer/ModesContainer/VerticesButton" to="." method="_on_vertices_button_toggled"]
[connection signal="toggled" from="MapContainer/ModesContainer/LinesButton" to="." method="_on_lines_button_toggled"]
[connection signal="toggled" from="MapContainer/ModesContainer/SectorsButton" to="." method="_on_sectors_button_toggled"]
